@@ -69,6 +69,19 @@ else:
     PLONE25 = 1
     PLONE21 = 1
 
+# Check for Plone 3.3 or above
+try:
+    from Products.CMFPlone.migrations import v3_3
+except ImportError:
+    PLONE33 = 0
+else:
+    PLONE33 = 1
+    PLONE32 = 1
+    PLONE31 = 1
+    PLONE30 = 1
+    PLONE25 = 1
+    PLONE21 = 1
+
 # Check for Plone 4.0 or above
 try:
     from Products.CMFPlone.factory import _IMREALLYPLONE4
@@ -76,6 +89,7 @@ except ImportError:
     PLONE40 = 0
 else:
     PLONE40 = 1
+    PLONE33 = 1
     PLONE32 = 1
     PLONE31 = 1
     PLONE30 = 1
