@@ -18,6 +18,9 @@ Changelog
   CMFPlone package.
   [hannosch]
 
+- Added PLONE33 constant.
+  [stefan]
+
 0.9.8b4 - 2008-10-26
 --------------------
 
